# bedrock-protocol

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  SPEC.md  pyproject.toml
.claude/: PROGRESS.md  settings.json
.claude/hooks/: check_rules.py
.claude/rules/: protocol.md  style.md  tests.md
.claude/skills/add-protocol-version/: SKILL.md
bpc/: README.md  __main__.py  dsl.py
bpc/templates/: enum.jinja  header.hpp.jinja  packet.cpp.j2  packet.h.j2
cmake/: BedrockProtocol.cmake
compiler/: main.py  pyproject.toml
compiler/src/bedrock_protocol_compiler/: __main__.py  cli.py  cpp.py  filters.py  frontend.py  models.py  parse.py  redeclaration.py  schema.py  types.py  versioning.py
compiler/src/bedrock_protocol_compiler/compiler/: __init__.py  code_generator.py  parser.py  registry.py
compiler/src/bedrock_protocol_compiler/compiler_cpp/: code_buffer.py  file_generator.py  generator.py  names.py  render.py  validate.py
compiler/src/bedrock_protocol_compiler/compiler_cpp/templates/: enum.jinja  header.hpp.jinja
compiler/src/bedrock_protocol_compiler/templates/: class.jinja  enum.jinja  header.hpp.jinja  serializer.jinja
compiler/templates/: class.jinja  enum.jinja  header.hpp.jinja
include/bedrock/: bitset.hpp  ddui.hpp  expected.hpp  nbt.hpp  protocol.hpp  protocol.hpp.in  serializer.hpp  stream.hpp  uuid.hpp
protocol/: __init__.py  _dsl.py  _primitives.py  actor.py  agent.py  attributes.py  biome.py  block.py  book.py  camera.py  command.py  common.py  crafting.py  ddui.py  dimension.py  disconnect.py  edu.py  effect.py  enum.py  game.py  graphics.py  input.py  inventory.py  item.py  item_stack_request.py  level.py  locator.py  login.py  map.py  mapping_test.py  molang.py  nbt.py  network.py  npc.py  player.py  resource_pack.py  resourcepack.py  scoreboard.py  script.py  structure.py  (+2 more)
src/bedrock_protocol/: cli.py  descriptor.py
src/bedrock_protocol/compiler/: __init__.py  code_generator.py  extensions.py  parser.py  registry.py  resolver.py
src/bedrock_protocol/compiler/cpp/: __init__.py  enum.py  field.py  file.py  file_generator.py  generator.py  printer.py  serializer.py  struct.py  validate.py
src/bedrock_protocol/compiler/cpp/templates/: serializer.jinja
tests/: CMakeLists.txt  test_001_login.cpp  test_002_play_status.cpp  test_003_server_to_client_handshake.cpp  test_004_client_to_server_handshake.cpp  test_005_disconnect.cpp  test_006_resource_packs_info.cpp  test_007_resource_pack_stack.cpp  test_008_resource_pack_client_response.cpp  test_010_set_time.cpp  test_011_start_game.cpp  test_014_remove_actor.cpp  test_015_add_item_actor.cpp  test_017_take_item_actor.cpp  test_018_move_actor_absolute.cpp  test_019_move_player.cpp  test_021_update_block.cpp  test_022_add_painting.cpp  test_027_actor_event.cpp  test_028_mob_effect.cpp  test_029_update_attributes.cpp  test_031_mob_equipment.cpp  test_032_mob_armor_equipment.cpp  test_033_interact.cpp  test_034_block_pick_request.cpp  test_035_actor_pick_request.cpp  test_036_player_action.cpp  test_039_set_actor_data.cpp  test_040_set_actor_motion.cpp  test_041_set_actor_link.cpp  test_043_set_spawn_position.cpp  test_044_animate.cpp  test_045_respawn.cpp  test_046_container_open.cpp  test_047_container_close.cpp  test_049_inventory_content.cpp  test_050_inventory_slot.cpp  test_051_container_set_data.cpp  test_052_crafting_data.cpp  test_054_gui_data_pick_item.cpp  (+124 more)
tools/cloudburst_import/: __init__.py  __main__.py  emit.py  enums.py  grouping.py  mappings.py  parser.py  version_chain.py
