[project]
name = "bedrock-protocol"
version = "0.1.0"
description = "Bedrock protocol compiler — reads protocol/*.py DSL and emits C++ headers."
requires-python = ">=3.12"
dependencies = [
    "click",
    "griffe",
    "inflection",
]

[project.scripts]
bpc = "bedrock_protocol.cli:main"

[dependency-groups]
dev = ["mypy"]

[project.optional-dependencies]
import-tools = ["javalang>=0.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bedrock_protocol"]

[tool.mypy]
files = ["src"]
python_version = "3.12"
strict = true
