[project]
name = "bedrock-protocol"
version = "0.1.0"
description = "Bedrock protocol compiler -- reads protocol/*.py DSL and emits C++ headers."
requires-python = ">=3.12"
dependencies = [
    "click",
    "griffe",
    "inflection",
]

[project.scripts]
bpc = "bedrock_protocol.cli:main"

[dependency-groups]
dev = ["mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bedrock_protocol"]

[tool.mypy]
files = ["src"]
python_version = "3.12"
strict = true

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "E", "F"]

[tool.ruff.lint.per-file-ignores]
# The protocol/ DSL files are read statically, never executed. F811 covers the
# deliberate @packet/@type version-redeclaration pattern. F821 covers enum
# references inside `when=` predicate lambdas, which Python scopes as undefined but
# the compiler resolves. Both stay active for the compiler under src/.
"protocol/*.py" = ["F811", "F821"]
