[project]
name = "bedrock-protocol-compiler"
version = "0.1.0"
description = "Bedrock protocol compiler — reads protocol/*.py DSL and emits C++ headers."
requires-python = ">=3.12"
dependencies = [
    "click",
    "griffe",
    "inflection",
    "jinja2",
]

[project.scripts]
bpc = "bedrock_protocol_compiler.cli:main"

[dependency-groups]
dev = ["mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bedrock_protocol_compiler"]

[tool.mypy]
files = ["src"]
python_version = "3.12"
strict = true
