add_executable(${PROJECT_NAME}_tests
    test_001_login.cpp
    test_002_play_status.cpp
    test_005_disconnect.cpp
    test_008_resource_pack_client_response.cpp
    test_011_start_game.cpp
    test_018_move_actor_absolute.cpp
    test_027_actor_event.cpp
    test_029_update_attributes.cpp
    test_031_mob_equipment.cpp
    test_033_interact.cpp
    test_044_animate.cpp
    test_050_inventory_slot.cpp
    test_052_crafting_data.cpp
    test_056_block_actor_data.cpp
    test_086_play_sound.cpp
    test_094_sub_client_login.cpp
    test_097_book_edit.cpp
    test_119_available_actor_identifiers.cpp
    test_122_biome_definition_list.cpp
    test_123_level_sound_event.cpp
    test_143_network_settings.cpp
    test_144_player_auth_input.cpp
    test_146_player_enchant_options.cpp
    test_152_emote_list.cpp
    test_158_animate_entity.cpp
    test_175_sub_chunk_request.cpp
    test_180_dimension_data.cpp
    test_193_request_network_settings.cpp
    test_302_trim_data.cpp
    test_315_serverbound_diagnostics.cpp
    test_322_client_movement_prediction_sync.cpp
    test_323_update_client_options.cpp
    test_328_primitive_shapes.cpp
    test_331_graphics_override_parameter.cpp
    test_341_locator_bar.cpp
    test_342_party_changed.cpp
    test_345_clientbound_attribute_layer_sync.cpp
    test_346_server_store_info.cpp
    test_347_server_presence_info.cpp
    test_item_descriptors.cpp)
target_link_libraries(${PROJECT_NAME}_tests PRIVATE
    bedrock::protocol
    Catch2::Catch2WithMain
)

include(Catch)
catch_discover_tests(${PROJECT_NAME}_tests)
